--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>CSS/HTML Workshop with Privateaser</title>
+    <link rel ='stylesheet' href='style.css'/>
   </head>
   <body>
+    <h1> Your Event : </h1>
     <div id="bar">
       <input class="js-name" type="text" placeholder="Bar name"/>
       <input class="js-price-by-hour" type="number" placeholder="Price by hour"/>
@@ -14,6 +16,7 @@
       <input class="js-time" type="number" placeholder="Time in h"/>
       <input class="js-persons" type="number" placeholder="Persons"/>
       <input class="js-option" type="checkbox" placeholder="Deductible option"/>
+      <label> Deductible option </label>
     </div>
     <button id="compute">Compute</button>
     <div id="actors"></div>
